# minegraph

./: .gitignore  CLAUDE.md  README.md  hello.py  pyproject.toml
app_docs/: feature-0-graphviz-visualization.md  feature-1-3d-graph-visualization.md  feature-2-3d-graph-hover-interactivity.md  feature-crafting-category-metadata.md  feature-fzf-interactive-options.md  feature-image-based-3d-nodes.md  feature-minecraft-transformation-extraction.md
config/: graph_colors.txt
notebooks/: cosmograph_visualization.ipynb
output/: items.csv  transformations.csv
specs/: add-category-metadata-to-crafting.md  bug-3d-image-rendering-issues.md  bug-annotationbox-position-update.md  bug-armadillo-parser-missing-scute.md  bug-bartering-parser-enchantment-extraction.md  bug-deduplicate-transformation-inputs.md  bug-fix-composter-parser.md  bug-fix-smelting-extraction.md  bug-fix-trading-parser-missing-trades.md  bug-fix-trading-parser.md  bug-gif-to-png-conversion.md  bug-image-download-improvements.md  bug-image-zoom-factor-too-small.md  bug-image-zoom-not-responsive.md  bug-invalid-items-in-transformation-data.md  bug-mob-drop-parser-missing-items.md  bug-tadpole-parser-biomes-not-items.md  bug-transformation-csv-format.md  bug-zoom-image-position-update.md  chore-change-spectral-to-spring-layout.md  extract-lazy-loaded-crafting-recipes.md  feature-3d-graph-hover-interactivity.md  feature-3d-graph-visualization.md  feature-add-bartering-parser.md  feature-cosmograph-visualization.md  feature-dynamic-image-size-slider.md  feature-fzf-interactive-options.md  (+9 more)
tests/: __init__.py  (+11 more)
(+120 files in other folders)
