[project]
name = "minegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "graphviz>=0.21",
    "lxml>=6.0.2",
    "networkx[default]>=3.5",
    "pyfzf>=0.3.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
